src/test/deca/etape_A/valid/if_elsif.deca
// Description :
//   test d'une boucle if else if

// Résultats : 
//   Ok

{
if ( 1==2 ) { 
print("hello") ;
} else if ( 1==3 ) {
print("bye") ;
}
}