src/test/deca/etape_A/invalid/inst3.deca
// Description :
//   test pour instruction

// Résultats :
//   Erreur syntaxique 
//   Ligne 9 : no viable alternative at input 'while'

{
while ( while ( 2 < 3 ) {
      print("hello");
}
}